test: 예약·후기·즐겨찾기 API 테스트 수정 및 문서화
프론트엔드 연동에 필요한 비즈니스 핵심 API 17종의 문서를 생성함
실제 사용자 환경(AppUser)을 모킹하여 API 연동의 안정성과 신뢰성을 확보함

- 예약(7개), 후기(6개), 즐겨찾기(4개) 엔드포인트 테스트 및 문서화
- 인증 및 권한 제어 로직 검증으로 보안 취약점 사전 차단
- 회의실별 후기 등 공개 API에 대한 접근성 정상 동작 확인